# cppfunkin_2

./: .gitignore  .gitmodules  CMakeLists.txt  ROADMAP.md
assets/: mymod.wasm
assets/characters/henry/: character.lua
assets/characters/henryalt/: character.lua  spritesheet.xml
assets/characters/titularguy/: character.lua  spritesheet.xml
assets/scripts/: testscript.lua
assets/songs/bonedoggle/: bonedoggle-hard.json
assets/songs/bonedoggle-sans/: bonedoggle-sans-hard.json
assets/songs/titular/: titular-chart.json
assets/stages/desert/: stage.lua
src/: Main.cpp  main.cpp
src/funkin/: Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  Group.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  Sprite.cpp  Sprite.hpp
src/funkin/data/: Song.cpp  Song.hpp
src/funkin/data/animation/: Animation.cpp  Animation.hpp
src/funkin/game/: AnimationController.cpp  AnimationController.hpp  Conductor.cpp  Conductor.hpp
src/funkin/game/events/: CameraTarget.hpp
src/funkin/modding/: LuaScript.cpp  LuaScript.hpp  WasmSandbox.cpp  WasmSandbox.hpp
src/funkin/objects/: Character.cpp  Character.hpp  Stage.cpp  Stage.hpp
src/funkin/objects/debug/: PerformanceTracker.cpp  PerformanceTracker.hpp
src/funkin/objects/notes/: Note.cpp  Note.hpp  NoteLane.cpp  NoteLane.hpp  PlayField.cpp  PlayField.hpp
src/funkin/scenes/: PlayScene.cpp  PlayScene.hpp
src/funkin/utilities/: CoolUtil.cpp  CoolUtil.hpp  Ease.hpp  Macros.h  ProcessInfo.cpp  ProcessInfo.hpp
